--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: desktop_help_flutter
-description: "A new Flutter project."
+name: HelpDeskDrzewniak
+description: "Helpdesk application made in flutter"
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
