--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: any
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
