--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   url_launcher: ^6.0.9
+  dropdown_button2: ^2.0.1
   window_manager: ^0.4.3
   shelf: ^1.2.0
   shelf_router: ^1.0.0
