--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: any
+  path_provider: ^2.0.11
 
   flutter_localizations:
     sdk: flutter
