--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: any
   path_provider: ^2.0.11
+  google_fonts: ^5.1.0
 
   flutter_localizations:
     sdk: flutter
